--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
   node_js:
   - "stable"
-  cache:
-  directories:
-    - node_modules
+  cache: npm
+  install:
+    - npm ci  
   script:
-  - npm run build
+    - npm run build
   deploy:
     provider: pages
     skip_cleanup: true
