--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "3d-react-carousal": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-spring-3d-carousel-2": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
