--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-spring-3d-carousel-2": "^1.0.1"
+    "react-spring-3d-carousel-2": "^1.0.1",
+    "swiper": "^8.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
