--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel-2": "^1.0.1",
     "swiper": "^8.2.6"
