--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel-2": "^1.0.1",
-    "swiper": "^8.2.6"
+    "swiper": "^8.2.6",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
