--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "3d-react-carousal": "^5.0.0",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.4.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel-2": "^1.0.1",
+    "react-tooltip": "^5.8.1",
     "swiper": "^8.3.0",
     "web-vitals": "^2.1.4"
   },
