--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring-3d-carousel": "^1.3.4",
     "react-spring-3d-carousel-2": "^1.0.1",
-    "swiper": "^8.3.0",
+    "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
