--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "3d-react-carousal": "^5.0.0",
+    "@react-three/drei": "^9.77.10",
+    "@react-three/fiber": "^8.13.4",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -14,6 +16,7 @@
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel-2": "^1.0.1",
     "swiper": "^8.3.0",
+    "three": "^0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
