--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.2",
     "react-spring-3d-carousel-2": "^1.0.1",
     "swiper": "^8.3.0",
     "three": "^0.154.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
