--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "private": true,
   "dependencies": {
     "3d-react-carousal": "^5.0.0",
-    "@react-three/drei": "^9.78.1",
-    "@react-three/fiber": "^8.13.4",
     "lottie-react": "^2.3.1",
-    "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
@@ -15,11 +12,8 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-spring": "^9.7.2",
     "react-spring-3d-carousel-2": "^1.0.1",
     "swiper": "^8.3.0",
-    "three": "^0.154.0",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -27,6 +21,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
