--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lottie-react": "^2.3.1",
     "maath": "^0.7.0",
     "react": "^18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.4.0",
@@ -17,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-spring-3d-carousel": "^1.3.4",
     "react-spring-3d-carousel-2": "^1.0.1",
+    "react-tooltip": "^5.8.1",
     "swiper": "^9.4.1",
     "react-spring": "^9.7.2",
     "three": "^0.154.0",
