--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-spring": "^9.7.2",
     "three": "^0.154.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "framer-motion": "^10.12.18"
   },
   "scripts": {
     "start": "react-scripts start",
