--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "3d-react-carousal": "^5.0.0",
-    "framer-motion": "^10.12.18",
+    "@react-three/drei": "^9.78.1",
+    "@react-three/fiber": "^8.13.4",
     "lottie-react": "^2.3.1",
+    "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
@@ -22,18 +24,13 @@
     "three": "^0.154.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
+    "framer-motion": "^10.12.18"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
