--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "web-vitals": "^2.1.4",
     "framer-motion": "^10.12.18"
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
