--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "three": "^0.154.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
-    "framer-motion": "^10.12.18"
+    "framer-motion": "^10.12.18",
+    "react-responsive-carousel": "^3.2.23"
   },
   "eslintConfig": {
     "extends": [
