--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^4.4.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -24,15 +26,7 @@
     "swiper": "^9.4.1",
     "three": "^0.154.0",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
-    "framer-motion": "^10.12.18",
-    "react-responsive-carousel": "^3.2.23"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
