--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^10.12.18",
     "lottie-react": "^2.3.1",
     "maath": "^0.7.0",
+    "postcss-normalize": "^10.0.1",
     "react": "^18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.2.0",
