--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.107.2",
     "@react-three/fiber": "^8.16.8",
     "react": "^18.3.1",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-remove-scroll-bar": "^2.3.6",
