--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.107.2",
     "@react-three/fiber": "^8.16.8",
     "core-js": "^3.37.1",
+    "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "jquery-mousewheel": "^3.1.13",
     "react": "^18.3.1",
