--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scroll": "^1.9.0",
     "react-skroll": "^0.7.3",
     "react-tooltip": "^5.27.0",
+    "require-context": "^1.1.0",
     "three": "^0.166.0"
   },
   "devDependencies": {
