--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.21.1",
+    "@rollup/rollup-linux-x64-musl": "^4.21.1"
   }
 }
