--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-spring-3d-carousel": "^1.3.4",
     "react-tooltip": "^5.27.0",
     "require-context": "^1.1.0",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
